# newrelic-insights-api

./: .gitignore  README.md  setup.cfg
src/NRInsightsApi/: __init__.py  get_data.py  insert_data.py
