[metadata]
name = NRInsightsApi
version = 0.0.1
author = Vikram
author_email = vikram1912@protonmail.com
description = REST API for New Relic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vikramnr/newrelic-insights-api
project_urls =
    Bug Tracker = https://github.com/vikramnr/newrelic-insights-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
